Replaced <DocumentationFile> items in CSPROJ files with <GenerateDocumentationFile>true</GenerateDocumentationFile> so that code docs will be included in nuget packages.
Also ensured that DEBUG and TRACE compiler variables are set properly and removed any RELEASE variables.

--- a/Go/GoBuilder/GoBuilder.csproj
+++ b/Go/GoBuilder/GoBuilder.csproj
@@ -20,12 +20,14 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
+    <DefineConstants />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
+    <DefineConstants />
   </PropertyGroup>
 
   <Target Name="GoBuild" AfterTargets="BeforeCompile">
