--- a/Test/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
+++ b/Test/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
@@ -38,6 +38,14 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='CodeDoc|net5.0|AnyCPU'">
+    <DefineConstants />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0|AnyCPU'">
+    <DefineConstants />
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="xunit.runner.json" />
   </ItemGroup>
