--- a/Test/Test.Neon.Cassandra/Test.Neon.Cassandra.csproj
+++ b/Test/Test.Neon.Cassandra/Test.Neon.Cassandra.csproj
@@ -17,6 +17,14 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0|AnyCPU'">
+    <DefineConstants></DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='CodeDoc|net5.0|AnyCPU'">
+    <DefineConstants />
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Scripts\schema-0000.script" />
     <None Remove="Scripts\schema-0001.script" />
