--- a/Test/Test.Neon.Common/Test.Neon.Common.csproj
+++ b/Test/Test.Neon.Common/Test.Neon.Common.csproj
@@ -39,6 +39,14 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='CodeDoc|net5.0|AnyCPU'">
+    <DefineConstants />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0|AnyCPU'">
+    <DefineConstants />
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="IORes\Resources\Folder1\Folder3\TextFile5.txt" />
     <None Remove="IORes\Resources\Folder1\TextFile3.txt" />
