--- a/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
+++ b/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
@@ -35,6 +35,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netcoreapp3.1|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='CodeDoc|netcoreapp3.1|AnyCPU'">
+    <DefineConstants />
   </PropertyGroup>
 
   <ItemGroup>
