--- a/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
+++ b/Test/Test.Neon.Deployment/Test.Neon.Deployment.csproj
@@ -17,17 +17,20 @@
     <WarningsAsErrors>;NU1605</WarningsAsErrors>
     <NoWarn>1701;1702;xUnit1026</NoWarn>
     <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <WarningsAsErrors>;NU1605;xUnit1006</WarningsAsErrors>
     <NoWarn>1701;1702;xUnit1026</NoWarn>
     <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
     <WarningsAsErrors>;NU1605;xUnit1006</WarningsAsErrors>
     <NoWarn>1701;1702;xUnit1026</NoWarn>
+    <DefineConstants />
   </PropertyGroup>
 
   <ItemGroup>
