--- a/Test/Test.NeonCli/Test.NeonCli.csproj
+++ b/Test/Test.NeonCli/Test.NeonCli.csproj
@@ -23,12 +23,14 @@
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
     <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
+    <DefineConstants />
   </PropertyGroup>
 
   <ItemGroup>
