--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/authorizationpolicy.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/authorizationpolicy.yaml
@@ -1,12 +1,12 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name:  {{ include "neon-kubekv-service.name" . }}
+  name:  {{ include "neon-cluster-api.name" . }}
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
     matchLabels:
-      app:  {{ include "neon-kubekv-service.name" . }}
+      app:  {{ include "neon-cluster-api.name" . }}
   action: ALLOW
   rules:
   - from:
