--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/serviceaccount.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/serviceaccount.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "neon-kubekv-service.name" . }}
+  name: {{ include "neon-cluster-api.name" . }}
   namespace: {{ .Release.Namespace }}
