kubekv working now

--- a/Services/neon-cluster-api/neon-cluster-api.csproj
+++ b/Services/neon-cluster-api/neon-cluster-api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>NeonKubeKv</RootNamespace>
+    <RootNamespace>NeonClusterApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="Npgsql" Version="5.0.10" />
   </ItemGroup>
   
