--- a/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
+++ b/Test/Test.Neon.Kube/Test.Neon.Kube.csproj
@@ -72,7 +72,7 @@
     <ProjectReference Include="..\..\Lib\Neon.Nats\Neon.Nats.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube.Xunit\Neon.Kube.Xunit.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Xunit\Neon.Xunit.csproj" />
-    <ProjectReference Include="..\..\Services\neon-kubekv-service\neon-kubekv-service.csproj" />
+    <ProjectReference Include="..\..\Services\neon-cluster-api\neon-cluster-api.csproj" />
   </ItemGroup>
 
 </Project>
