--- a/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/authorizationpolicy.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-cluster-api/templates/authorizationpolicy.yaml
@@ -11,4 +11,4 @@ spec:
   rules:
   - from:
     - source:
-        principals: {{- printf "cluster.local/ns/%s/sa/%s" {{ .Release.Namespace }} "neon-cluster-operator" -}}
+        principals: [{{- printf "cluster.local/ns/%s/sa/%s" .Release.Namespace "neon-cluster-operator" -}}]
