first cut at ready to go setup

--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -165,10 +165,11 @@ volumeMounts: []
 
 # deploymentAnnotations -- Additional annotations to add to the controller Deployment
 deploymentAnnotations:
-  secret.reloader.stakater.com/reload: "webhook-server-cert"
+  reloader.stakater.com/auto: "true"
 
 # podAnnotations -- Additional annotations to add to the controller Pods
-podAnnotations: {}
+podAnnotations:
+  reloader.stakater.com/auto: "true"
 
 # podLabels -- Additional labels to add to the controller Pods
 podLabels: {}
