--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
@@ -30,12 +30,12 @@ spec:
       ingress:
         host: registry.{{ .Values.clusterDomain }}
       tls:
-        certificateRef: {{ .Values.clusterDomain }}
+        certificateRef: neon-cluster-certificate
     notary:
       ingress:
         host: notary.{{ .Values.clusterDomain }}
       tls:
-        certificateRef: {{ .Values.clusterDomain }}
+        certificateRef: neon-cluster-certificate
   externalURL: https://registry.{{ .Values.clusterDomain }}
   harborAdminPasswordRef: registry
   imageChartStorage:
