--- a/Lib/Neon.Kube/Resources/Helm/minio/templates/tenant-secret.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/templates/tenant-secret.yaml
@@ -6,6 +6,8 @@ kind: Secret
 metadata:
   name: {{ dig "secrets" "name" "" . }}
   namespace: {{ .namespace }}
+  annotations:
+    reloader.stakater.com/match: "true"
 type: Opaque
 data:
   ## Access Key for MinIO Tenant
