--- a/Lib/Neon.Kube/Resources/Helm/grafana/templates/dashboards/k8s-resources-cluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/templates/dashboards/k8s-resources-cluster.yaml
@@ -2962,7 +2962,7 @@ spec:
                     "options": [
 
                     ],
-                    "query": "label_values(node_cpu_seconds_total, cluster)",
+                    "query": "label_values(kube_pod_info, cluster)",
                     "refresh": 2,
                     "regex": "",
                     "sort": 1,
