--- a/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana-agent/templates/configmap.yaml
@@ -45,160 +45,40 @@ data:
               metrics_path: /stats/prometheus
               kubernetes_sd_configs:
               - role: pod
-
               relabel_configs:
               - source_labels: 
                   - __meta_kubernetes_pod_container_port_name
                 action: keep
                 regex: '.*-envoy-prom'
-            - job_name: kubernetes-pods
-              kubernetes_sd_configs:
-                - role: pod
-              relabel_configs:
-                - action: drop
-                  regex: "false"
-                  source_labels:
-                    - __meta_kubernetes_pod_annotation_prometheus_io_scrape
-                - action: keep
-                  regex: .*-metrics
-                  source_labels:
-                    - __meta_kubernetes_pod_container_port_name
-                - action: replace
-                  regex: (https?)
-                  replacement: $1
-                  source_labels:
-                    - __meta_kubernetes_pod_annotation_prometheus_io_scheme
-                  target_label: __scheme__
-                - action: replace
-                  regex: (.+)
-                  replacement: $1
-                  source_labels:
-                    - __meta_kubernetes_pod_annotation_prometheus_io_path
-                  target_label: __metrics_path__
-                - action: replace
-                  regex: (.+?)(\:\d+)?;(\d+)
-                  replacement: $1:$3
-                  source_labels:
-                    - __address__
-                    - __meta_kubernetes_pod_annotation_prometheus_io_port
-                  target_label: __address__
-                - action: drop
-                  regex: ""
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                - action: replace
-                  replacement: $1
-                  separator: /
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                    - __meta_kubernetes_pod_label_name
-                  target_label: job
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                  target_label: pod
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_container_name
-                  target_label: container
-                - action: replace
-                  separator: ':'
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                    - __meta_kubernetes_pod_container_name
-                    - __meta_kubernetes_pod_container_port_name
-                  target_label: instance
-                - action: labelmap
-                  regex: __meta_kubernetes_pod_annotation_prometheus_io_param_(.+)
-                  replacement: __param_$1
-                - action: drop
-                  regex: Succeeded|Failed
-                  source_labels:
-                    - __meta_kubernetes_pod_phase
-            - job_name: neon-monitor/kube-state-metrics
-              kubernetes_sd_configs:
-                - namespaces:
-                      names:
-                        - neon-monitor
-                  role: pod
-              relabel_configs:
-                - action: keep
-                  regex: kube-state-metrics
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                - action: replace
-                  separator: ':'
-                  source_labels:
-                    - __meta_kubernetes_pod_name
-                    - __meta_kubernetes_pod_container_name
-                    - __meta_kubernetes_pod_container_port_name
-                  target_label: instance
-            - job_name: neon-monitor/node-exporter
-              kubernetes_sd_configs:
-                - namespaces:
-                      names:
-                        - neon-monitor
-                  role: pod
-              relabel_configs:
-                - action: keep
-                  regex: node-exporter
-                  source_labels:
-                    - __meta_kubernetes_pod_label_name
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_pod_node_name
-                  target_label: instance
-                - action: replace
-                  source_labels:
-                    - __meta_kubernetes_namespace
-                  target_label: namespace
             - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-              job_name: kube-system/kubelet
+              job_name: integrations/kubernetes/kubelet
               kubernetes_sd_configs:
-                - role: node
+              - role: node
               relabel_configs:
-                - replacement: kubernetes.default.svc.cluster.local:443
-                  target_label: __address__
-                - replacement: https
-                  target_label: __scheme__
-                - regex: (.+)
-                  replacement: /api/v1/nodes/$1/proxy/metrics
-                  source_labels:
-                    - __meta_kubernetes_node_name
-                  target_label: __metrics_path__
-              tls_config:
-                  ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-                  insecure_skip_verify: false
-            - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-              job_name: kube-system/cadvisor
-              kubernetes_sd_configs:
-                - role: node
-              metric_relabel_configs:
-                - action: drop
-                  regex: 'container_([a-z_]+);'
-                  source_labels:
-                    - __name__
-                    - image
-                - action: drop
-                  regex: container_(network_tcp_usage_total|network_udp_usage_total|tasks_state|cpu_load_average_10s)
-                  source_labels:
-                    - __name__
-              relabel_configs:
-                - replacement: kubernetes.default.svc.cluster.local:443
-                  target_label: __address__
-                - regex: (.+)
-                  replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
-                  source_labels:
-                    - __meta_kubernetes_node_name
-                  target_label: __metrics_path__
+              - replacement: kubernetes.default.svc:443
+                target_label: __address__
+              - regex: (.+)
+                source_labels: [__meta_kubernetes_node_name]
+                replacement: /api/v1/nodes/$1/proxy/metrics
+                target_label: __metrics_path__
               scheme: https
               tls_config:
-                  ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-                  insecure_skip_verify: false
+                ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            - bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+              job_name: integrations/kubernetes/cadvisor
+              kubernetes_sd_configs:
+              - role: node
+              relabel_configs:
+              - replacement: kubernetes.default.svc:443
+                target_label: __address__
+              - regex: (.+)
+                replacement: /api/v1/nodes/$1/proxy/metrics/cadvisor
+                source_labels:
+                - __meta_kubernetes_node_name
+                target_label: __metrics_path__
+              scheme: https
+              tls_config:
+                ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
             - job_name: "cri-o"
               scrape_interval: 1m
               metrics_path: /metrics
@@ -259,7 +139,7 @@ data:
               kubernetes_sd_configs:
                 - role: pod
               pipeline_stages:
-                - docker: {}
+                - cri: {}
               relabel_configs:
                 - source_labels:
                     - __meta_kubernetes_pod_label_name
@@ -302,7 +182,7 @@ data:
               kubernetes_sd_configs:
                 - role: pod
               pipeline_stages:
-                - docker: {}
+                - cri: {}
               relabel_configs:
                 - action: drop
                   regex: .+
@@ -349,7 +229,7 @@ data:
               kubernetes_sd_configs:
                 - role: pod
               pipeline_stages:
-                - docker: {}
+                - cri: {}
               relabel_configs:
                 - action: drop
                   regex: .+
@@ -402,7 +282,7 @@ data:
               kubernetes_sd_configs:
                 - role: pod
               pipeline_stages:
-                - docker: {}
+                - cri: {}
               relabel_configs:
                 - action: drop
                   regex: .+
@@ -457,7 +337,7 @@ data:
               kubernetes_sd_configs:
                 - role: pod
               pipeline_stages:
-                - docker: {}
+                - cri: {}
               relabel_configs:
                 - action: drop
                   regex: ""
