--- a/Lib/Neon.Kube/Resources/Helm/kube-state-metrics/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/kube-state-metrics/templates/servicemonitor.yaml
@@ -21,7 +21,7 @@ spec:
       app.kubernetes.io/name: {{ template "kube-state-metrics.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
   endpoints:
-    - port: http
+    - targetPort: 8080
       {{- if .Values.prometheus.monitor.honorLabels }}
       honorLabels: true
       {{- end }}
